fix: width/height overflow

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -20,8 +20,8 @@ body {
     rgb(var(--background-start-rgb));
     margin: 0;
     padding: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
 }
